Fix horizontal scroll in mobile version

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,6 +10,7 @@ $font-size: 14px;
 html, body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 h1, h2, h3 {
